<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/input_dialog_message"
        android:id="@+id/input_Dialog_Message"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="@android:color/black"
        android:layout_weight="1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_dialog_placeholder"
        android:id="@+id/insert_dialog_et"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/radio_group">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nature_category"
            android:checked="true"
            android:id="@+id/natureButton" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/human_category"
            android:id="@+id/humanButton" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/story_category"
            android:id="@+id/storyButton" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/machine_category"
            android:id="@+id/machineButton" />
    </RadioGroup>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_weight="1">

        <Button

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/insert_Dialog_Negative_Button"
            android:id="@+id/btn_cancel"
            android:background="@drawable/pink_button"
            android:textColor="@android:color/white"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/insert_Dialog_Positive_Button"
            android:background="@drawable/aqua_button"
            android:textColor="@android:color/white"
            android:id="@+id/btn_yes"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>