<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="metropolia.fi.suondbubbles.activities.welcome"
    android:orientation="vertical"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1.20"
        android:gravity="bottom|center_vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/welcome_text_title"
            android:gravity="center"
            android:layout_marginBottom="30dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/welcome_text_paragraph_1"
            android:gravity="center"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/welcome_text_paragraph_2"
            android:gravity="center"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="0.80"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:text="@string/guide_1_step"
            android:gravity="center"
            android:textColor="@color/text_gray"
            android:layout_marginBottom="10dp"
            android:visibility="invisible" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_skip"
                android:id="@+id/btn_skip"
                android:background="@drawable/pink_button"
                android:textColor="@android:color/white"
                android:layout_weight="1"
                android:textSize="14sp"
                android:onClick="onSkipClick"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_next"
                android:background="@drawable/aqua_button"
                android:textColor="@android:color/white"
                android:id="@+id/btn_next"
                android:textSize="14sp"
                android:onClick="onNextClick"
                android:layout_weight="1" />
        </LinearLayout>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dont_show_checkbox"
            android:text="@string/do_not_show_again"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp" />
    </LinearLayout>
</LinearLayout>
