<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="metropolia.fi.suondbubbles.activities.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:textAppearance="?android:attr/textAppearanceLargePopupMenu"
        android:text="@string/title_activity_login"
        android:textSize="40sp"
        android:id="@+id/title_login"
        android:layout_marginBottom="40dp"
        android:layout_weight="0.3"
        android:layout_gravity="center"
        android:gravity="bottom"
/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:hint="@string/username_activity_login"
        android:text="androidTest"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:background="@drawable/rounded"
        android:layout_weight="0.005"
        android:layout_gravity="center" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:text="1uithread"
        android:background="@drawable/rounded"
        android:hint="@string/password_activity_login"
        android:maxLines="1"
        android:layout_weight="0.005"
        android:layout_gravity="center" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/go_activity_login"
        android:id="@+id/go_button"
        android:backgroundTint="@color/passive_orange"
        android:layout_weight="0.3"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="160dp"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
