<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/confirm_exit_dialog_title"
        android:id="@+id/confirm_exit_dialog"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:textColor="#231F20"
        android:layout_weight="1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/confirm_exit_dialog_message"
        android:id="@+id/confirm_Dialog_Message"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="#231F20"
        android:layout_weight="1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="20dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_weight="1">

        <Button

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/confirm_Dialog_Negative_Button"
            android:id="@+id/btn_cancel"
            android:background="@drawable/pink_button"
            android:textColor="@android:color/white"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/confirm_Dialog_Positive_Button"
            android:background="@drawable/aqua_button"
            android:textColor="@android:color/white"
            android:id="@+id/btn_yes"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>