<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="metropolia.fi.suondbubbles.activities.Guide_5_Activity"
    android:orientation="vertical"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1.20"
        android:gravity="center">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/guide_5_line_1"
            android:gravity="center" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/guide_5_line_2"
                android:drawableRight="@drawable/ic_record_passive"
                android:gravity="center_vertical|right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/guide_5_line_3"
                android:gravity="left|center_vertical" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="0.80"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:text="@string/guide_5_step"
            android:gravity="center"
            android:textColor="@color/text_gray"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/guide_5_button"
                android:background="@drawable/aqua_button"
                android:textColor="@android:color/white"
                android:id="@+id/btn_next"
                android:textSize="14sp"
                android:onClick="onNextClick"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
