<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="metropolia.fi.suondbubbles.activities.Guide_2_Activity"
    android:orientation="vertical"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1.20"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/guide_2_line_1"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="0.80"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:text="@string/guide_2_step"
            android:textColor="@color/text_gray"
            android:gravity="center"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_skip"
                android:id="@+id/btn_skip"
                android:background="@drawable/pink_button"
                android:textColor="@android:color/white"
                android:layout_weight="1"
                android:textSize="14sp"
                android:onClick="onSkipClick"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_next"
                android:background="@drawable/aqua_button"
                android:textColor="@android:color/white"
                android:id="@+id/btn_next"
                android:textSize="14sp"
                android:onClick="onNextClick"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
